# device_soc_asrmicro

./: BUILD.gn  CODEOWNERS  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  NOTICE  OAT.xml  README.en.md  README.md  README_ZH.md
asr582x/: BUILD.gn  Kconfig.liteos_m.defconfig.asr5822s  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
asr582x/liteos_m/: BUILD.gn
asr582x/liteos_m/components/: BUILD.gn
asr582x/liteos_m/components/mbedtls/: BUILD.gn
asr582x/liteos_m/components/mbedtls/config/: config_liteos_m.h
asr582x/liteos_m/components/net/lwip-2.1/: BUILD.gn
asr582x/liteos_m/components/net/lwip-2.1/include/lwip/: lwipopts.h
asr582x/liteos_m/sdk/: BUILD.gn  EULA  duetiot.py  gcc.ld  target_config.h
asr582x/liteos_m/sdk/adapter/hals/communication/wifi_lite/wifiaware/: BUILD.gn
asr582x/liteos_m/sdk/adapter/hals/communication/wifi_lite/wifiaware/source/: hal_wifiaware.c
asr582x/liteos_m/sdk/adapter/hals/communication/wifi_lite/wifiservice/: BUILD.gn
asr582x/liteos_m/sdk/adapter/hals/communication/wifi_lite/wifiservice/source/: wifi_device.c  wifi_device_util.h  (+1 more)
asr582x/liteos_m/sdk/adapter/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_i2c.c  hal_iot_pwm.c  hal_iot_uart.c  hal_iot_watchdog.c  hal_lowpower.c  hal_reset.c
asr582x/liteos_m/sdk/adapter/hals/update/: BUILD.gn  hal_hota_board.c
asr582x/liteos_m/sdk/adapter/hals/utils/file/: BUILD.gn
asr582x/liteos_m/sdk/adapter/hals/utils/file/src/: hal_file.c
asr582x/liteos_m/sdk/config/: BUILD.gn  board.h  partition_conf.c
asr582x/liteos_m/sdk/drivers/: BUILD.gn
asr582x/liteos_m/sdk/drivers/at_cmd/: atcmd_user.c  atcmdplus_ble.c  atcmdplus_ble.h  lega_at_api.h
asr582x/liteos_m/sdk/drivers/ble_inc/: _reg_blecore.h  _reg_em_ble_cs.h  _reg_em_ble_ral.h  _reg_em_ble_rx_cte_desc.h  _reg_em_ble_rx_desc.h  _reg_em_ble_tx_desc.h  _reg_em_ble_wpal.h  _reg_em_et.h  app.h  arch.h  at_api.h  att.h  co_bt.h  co_bt_defines.h  co_error.h  co_hci.h  co_int.h  co_list.h  co_llcp.h  co_lmp.h  co_math.h  co_utils.h  compiler.h  dbg.h  dbg_swdiag.h  dbg_trc.h  em_map.h  em_map_ble.h  gap.h  gapc_task.h  gapm_task.h  ke_msg.h  ke_task.h  msm_ble_api.h  ohos_bt_def.h  ohos_bt_gatt.h  ohos_bt_gatt_client.h  ohos_bt_gatt_server.h  reg_assert_mgr.h  reg_blecore.h  (+36 more)
asr582x/liteos_m/sdk/drivers/ble_src/: app.c  at_ble.c  harmony_ble_adpter.c
asr582x/liteos_m/sdk/drivers/common/: duet_common.h  lega_dbg.c  lega_dbg.h  lega_mac_addr.c  lega_types.h
asr582x/liteos_m/sdk/drivers/driver/: BUILD.gn
asr582x/liteos_m/sdk/drivers/driver/inc/: duet.h  duet_adc.h  duet_boot.h  duet_dma.h  duet_efuse.h  duet_flash.h  duet_flash_alg.h  duet_flash_encrypt.h  duet_gpio.h  duet_i2c.h  duet_i2s.h  duet_pinmux.h  duet_psram.h  duet_pwm.h  duet_ram_layout.h  duet_rf_spi.h  duet_rnd.h  duet_rtc.h  duet_spi.h  duet_timer.h  duet_uart.h  duet_uart_index.h  duet_wdg.h
asr582x/liteos_m/sdk/drivers/driver/src/: duet_adc.c  duet_board.c  duet_boot.c  duet_dma.c  duet_efuse.c  duet_flash.c  duet_flash_alg.c  duet_flash_encrypt.c  duet_gpio.c  duet_i2c.c  duet_i2s.c  duet_pinmux.c  duet_psram.c  duet_pwm.c  duet_ram_layout.c  duet_rf_spi.c  duet_rnd.c  duet_rtc.c  duet_spi.c  duet_timer.c  duet_uart.c  duet_wdg.c
asr582x/liteos_m/sdk/drivers/include/: lega_hw_common.h  lega_rnd.h  lega_wlan_api.h  lega_wlan_api_aos.h  system_version.h
asr582x/liteos_m/sdk/drivers/iperf/: iperf_printf.h  lwip_app_iperf.h  lwip_iperf.c  rxperf.c  txperf.c  urxperf.c  utxperf.c
asr582x/liteos_m/sdk/drivers/kv/include/: duet_flash_kv.h  kv_conf.h  kv_err.h
asr582x/liteos_m/sdk/drivers/libs/Cortex-M4/: asrLibs.txt
asr582x/liteos_m/sdk/drivers/ota/: ota_port.h
asr582x/liteos_m/sdk/drivers/platform/CMSIS/Include/: core_cm4.h  core_cm4_simd.h  core_cmFunc.h  core_cmInstr.h
asr582x/liteos_m/sdk/drivers/platform/misc/: misc.h
asr582x/liteos_m/sdk/drivers/platform/system/: duet_common.c  panic_mpu.c  printf-stdarg.c  printf_uart.c  sys.c  sysCalls.c  system_cm4.c  systick_delay.c
asr582x/liteos_m/sdk/drivers/platform/system/include/: duet_cm4.h  panic_mpu.h  pmu.h  printf_uart.h  system_cm4.h  systick_delay.h
asr582x/liteos_m/sdk/drivers/rfota/: rfota_ble.c  rfota_wifi.c
asr582x/liteos_m/sdk/drivers/security/inc/: crys_aesccm.h  crys_ecpki_build.h  crys_ecpki_dh.h  crys_ecpki_domain.h  crys_ecpki_ecdsa.h  crys_ecpki_error.h  crys_ecpki_kg.h  crys_ecpki_types.h  crys_hash.h  crys_hash_defs.h  crys_hmac.h  crys_hmac_defs.h  crys_pka_defs_hw.h  crys_rnd_error.h  crys_rsa_build.h  crys_rsa_error.h  crys_rsa_kg.h  crys_rsa_prim.h  crys_rsa_schemes.h  crys_rsa_types.h  lega_aes.h  lega_ccm.h  lega_ecc.h  lega_hash.h  lega_hmac.h  lega_hw_common.h  lega_rnd.h  lega_rsa.h  ssi_pal_compiler.h  ssi_pka_hw_plat_defs.h
asr582x/liteos_m/sdk/drivers/security/src/: lega_aes.c  lega_ccm.c  lega_ecc.c  lega_hash.c  lega_hmac.c  lega_hw_common.c  lega_rnd.c  lega_rsa.c
asr582x/liteos_m/sdk/hal/: BUILD.gn
asr582x/liteos_m/sdk/hal/inc/: flash.h  hw.h  uart.h  wdg.h
asr582x/liteos_m/sdk/hal/src/: flash.c  gpio.c  hw.c  i2c.c  pwm.c  rng.c  rtc.c  timer.c  uart.c  wdg.c  wifi_adapter.c
asr582x/liteos_m/sdk/hal/src/pwrmgmt_hal/: board_cpu_pwr.c  board_cpu_pwr_rtc.c  board_cpu_pwr_systick.c
asr582x/liteos_m/sdk/lwip/include/lwip/: dhcp.h  errno.h  etharp.h  lwip_hooks.h  netif.h  opt.h  pbuf.h  sockets.h
asr582x/liteos_m/sdk/lwip/include/lwip/apps/: altcp_tls_mbedtls_opts.h  http_client.h  mqtt_opts.h
asr582x/liteos_m/sdk/lwip/port/: sys_arch.c
asr582x/liteos_m/sdk/lwip/port/include/: lwipopts.h
asr582x/liteos_m/sdk/lwip/port/include/arch/: cc.h  sys_arch.h
asr582x/liteos_m/sdk/rtos/: BUILD.gn  lega_rtos.c  lega_rtos.h  lega_rtos_port.h  liteos_patch.c  liteos_patch.h
asr582x/liteos_m/sdk/startup/: BUILD.gn  board.c  board.h  duet_version.h  startup.c  startup_cm4.S
asr582x/liteos_m/sdk/tools/ble_rom_symbol/: asr_ble_rom_symbol_v20200507204845.txt  ble_rom_v10_0_8_asr_20200507204845.elf
asr582x/liteos_m/sdk/tools/factory_gen/: gen_factory_bin.py
