if (ohos_kernel_type == "liteos_m") {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/config/subsystem/lite_subsystem.gni")
  import("//kernel/liteos_m/liteos.gni")
  module_name = get_path_info(rebase_path("."), "name")
  module_group(module_name) {
    modules = [ "liteos_m" ]
  }
}