# Copyright (c) 2022 ASR Microelectronics (Shanghai) Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [ "." ]
}

kernel_module("asr_system") {
  sources = [
    #        "common/lega_mac_addr.c",
    "at_cmd/atcmd_user.c",
    "at_cmd/atcmdplus_ble.c",
    "ble_src/app.c",
    "ble_src/at_ble.c",
    "ble_src/harmony_ble_adpter.c",
    "iperf/lwip_iperf.c",
    "platform/system/printf-stdarg.c",
    "platform/system/printf_uart.c",
    "platform/system/sysCalls.c",
    "rfota/rfota_ble.c",
    "rfota/rfota_wifi.c",

    #        "platform/system/system_cm4.c",
    #        "platform/system/panic_mpu.c",
  ]
}
