# Copyright (c) 2022 ASR Microelectronics (Shanghai) Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [ "." ]
}

kernel_module("asr_startup") {
  sources = [
      "startup.c",
      "board.c",
      "startup_cm4.S",
  ]

  include_dirs = [
    "//drivers/framework/include/platform",
    "//drivers/framework/include/utils",
    "//drivers/adapter/khdf/liteos_m/osal/include",
    "//drivers/framework/include/osal",
    "//drivers/framework/core/common/include/manager",
    "//utils/native/lite/include",
    "//utils/native/lite/memory/include",
  ]
}