# Copyright (c) 2022 ASR Microelectronics (Shanghai) Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [ "." ]
}

kernel_module("asr_startup") {
  sources = [
    "board.c",
    "startup.c",
    "startup_cm4.S",
  ]

  include_dirs = [
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/interfaces/inner_api/osal/shared",
    "//drivers/hdf_core/framework/core/common/include/manager",
    "//commonlibrary/utils_lite/include",
    "//commonlibrary/utils_lite/memory/include",
  ]
}
