# Copyright (c) 2022 ASR Microelectronics (Shanghai) Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

config("public") {
  include_dirs = [ "inc/" ]
}

kernel_module("asr_drivers") {
  sources = [
    "src/duet_board.c",
    "src/duet_boot.c",
    "src/duet_dma.c",
    "src/duet_efuse.c",
    "src/duet_flash.c",
    "src/duet_flash_alg.c",
    "src/duet_gpio.c",
    "src/duet_i2c.c",
    "src/duet_pinmux.c",
    "src/duet_pwm.c",

    #        "src/duet_rtc.c",
    "src/duet_rf_spi.c",
    "src/duet_timer.c",
    "src/duet_uart.c",
    "src/duet_wdg.c",
  ]
}
